// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components Cues should look structurally correct when there is a active cue 1`] = `
<div>
  <div
    class="svelte-v278vs active notMobile"
    data-testid="cues"
  >
    <span
      class="svelte-v278vs"
      data-testid="cue"
    >
      <span>
        #1 3-5
      </span>
    </span>
  </div>
  
  
</div>
`;

exports[`components Cues should look structurally correct when there is no active cue 1`] = `
<div>
  <div
    class="svelte-v278vs notMobile"
    data-testid="cues"
  />
  
  
</div>
`;
